# project_tp

./: CMakeLists.txt  Dockerfile  sort.h  sort_parallel.cpp  test.cpp
.github/workflows/: build_and_test.yml
